--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,4 +1,6 @@
-html, body, #root {
+html,
+body,
+#root {
   height: 100%;
 }
 body {
@@ -13,6 +15,7 @@ body {
   grid-gap: 2em;
   grid-template-columns: repeat(2, minmax(350px, 1fr));
   grid-template-rows: auto;
+  height: 60vh;
 }
 .box {
   display: flex;
@@ -39,8 +42,8 @@ body {
   border: 1px solid transparent;
   color: white;
   margin-right: 1em;
-  padding: .25em .75em;
-  transition: all .25s ease-in;
+  padding: 0.25em 0.75em;
+  transition: all 0.25s ease-in;
   &:hover {
     background: white;
     border: 1px solid hotpink;
